# MyProject_1

./: .gitignore.gitignore
NfcDemo1.X/: PIC32MX150F128D_Config.mc3
NfcDemo1.X/NxpNfcRdLib/: CMakeLists.txt
NfcDemo1.X/NxpNfcRdLib/comps/: CMakeLists.txt
NfcDemo1.X/NxpNfcRdLib/comps/phalMful/: CMakeLists.txt
NfcDemo1.X/NxpNfcRdLib/comps/phalTop/: CMakeLists.txt
NfcDemo1.X/NxpNfcRdLib/comps/phhalHw/: CMakeLists.txt
NfcDemo1.X/NxpNfcRdLib/comps/phhalHw/src/: phhalHw.c
NfcDemo1.X/NxpNfcRdLib/comps/phhalHw/src/PN7462AU/: phhalHw_PN7462AU.c
NfcDemo1.X/NxpNfcRdLib/comps/phhalHw/src/Pn5180/: phhalHw_Pn5180_Instr.c  phhalHw_Pn5180_Int.c  phhalHw_Pn5180_Wait.c
NfcDemo1.X/NxpNfcRdLib/comps/phhalHw/src/Rc523/: phhalHw_Rc523.c  phhalHw_Rc523_Config.h  phhalHw_Rc523_Int.c
NfcDemo1.X/NxpNfcRdLib/comps/phhalHw/src/Rc663/: phhalHw_Rc663.c  phhalHw_Rc663.h  phhalHw_Rc663_Cmd.c
NfcDemo1.X/NxpNfcRdLib/intfs/: NxpNfcRdLib_Ver.h  phCryptoRng.h  phCryptoSym.h  phLog.h  phNfcLib.h  phOsal.h  phOsal_Config.h  phPlatform.h  phPlatform_Port_Host.h  phPlatform_Port_K81_PN5180.h  phPlatform_Port_K82_PN5180.h  phPlatform_Port_LPC11u68_RC523.h  phPlatform_Port_LPC1769_PN5180.h  phPlatform_Port_LPC1769_RC523.h  phPlatform_Port_LPC1769_RC663.h  phPlatform_Port_PIC32MX.h  phPlatform_Port_PIC32MX_PN5180.h  phPlatform_Port_PN7462AU.h  phPlatform_Port_Pi.h  phTools.h  phacDiscLoop.h  phalFelica.h  phalI15693.h  phalI18000p3m3.h  phalMfdf.h  phalSli.h  phalT1T.h  phalTop.h  phbalReg.h  phceT4T.h  phhalHw_Pn5180_Instr.h  phhalHw_Pn5180_Reg.h  phhalHw_Rc523_Reg.h  phhalHw_Rc663_Reg.h  phlnLlcp.h  phnpSnep.h  phpalEpcUid.h  phpalI14443p3a.h  phpalI18000p3m3.h  phpalI18092mPI.h  (+1 more)
NfcDemo1.X/NxpNfcRdLib/types/: ph_NxpBuild.h  ph_NxpBuild_PIC32MX_PN5180.h  ph_RefDefs.h  ph_Status.h
NfcDemo1.X/mcc_generated_files/: adc1.c  adc1.h  interrupt_manager.c  mcc.c  mcc.h  pin_manager.c  spi1.h  spi2.c  spi2.h  tmr2.c  tmr2.h  uart1.c  uart1.h
NfcDemo1.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
NfcDemo1.X/nbproject/private/: private.xml
NfcDemo1.X/nxp_reader_config_files/: ph_NxpBuild_App.h
NfcDemo2/: PIC32MX150F128D_Config.mc3  debug_watch_list.xwatch  main.c  main_nfcdemo1.c
NfcDemo2/NxpNfcRdLib/comps/phNfcLib/: CMakeLists.txt
NfcDemo2/NxpNfcRdLib/comps/phNfcLib/src/: phNfcLib_MFDF.c  phNfcLib_Utility.c
NfcDemo2/NxpNfcRdLib/comps/phOsal/: CMakeLists.txt
NfcDemo2/NxpNfcRdLib/comps/phOsal/src/Freertos/: phOsal_Freertos.c
NfcDemo2/NxpNfcRdLib/comps/phOsal/src/Linux/: phOsal_Linux.c
NfcDemo2/NxpNfcRdLib/comps/phOsal/src/NullOs/: phOsal_NullOs.c  phOsal_NullOs.h
NfcDemo2/NxpNfcRdLib/comps/phPlatform/: CMakeLists.txt
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/: phPlatform.c
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/Port/K81/: phPlatform_Port_K81.c  phPlatform_Port_KinetisTimer.c
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/Port/K82/: phPlatform_Port_K82.c
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/Port/LPC1769/: cr_startup_lpc175x_6x.c  iar_startup_lpc177x_8x.s  keil_startup_lpc177x_8x.s
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/Port/LPCTimer/: phPlatform_Port_LPCTimer.c
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/Port/PIC32MX/: phPlatform_Port_PIC32MXTimer.c
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/Port/PN7462AU/: phPlatform_Port_PN7462AU.c
NfcDemo2/NxpNfcRdLib/comps/phPlatform/src/Port/RaspberryPi/: phPlatform_Port_PiGpio.c
NfcDemo2/NxpNfcRdLib/comps/phalI15693/: CMakeLists.txt
NfcDemo2/NxpNfcRdLib/comps/phalI15693/src/: phalI15693.c
NfcDemo2/NxpNfcRdLib/comps/phalI15693/src/Sw/: phalI15693_Sw.h  phalI15693_Sw_Int.h
NfcDemo2/NxpNfcRdLib/comps/phbalReg/: CMakeLists.txt
NfcDemo2/NxpNfcRdLib/comps/phbalReg/src/: phbalReg.c
NfcDemo2/NxpNfcRdLib/comps/phbalReg/src/KinetisSPI/: phbalReg_KinetisSpi.c
NfcDemo2/NxpNfcRdLib/comps/phbalReg/src/LinuxKernelSpi/: phbalReg_LinuxKernelSpi.h
NfcDemo2/NxpNfcRdLib/comps/phbalReg/src/LinuxUserI2C/: phbalReg_LinuxUserI2C.h
NfcDemo2/NxpNfcRdLib/comps/phbalReg/src/LpcOpenSPI/: phbalReg_LpcOpenSpi.c  phbalReg_LpcOpenSpi.h
NfcDemo2/NxpNfcRdLib/comps/phbalReg/src/Pic32mxSPI/: phbalReg_Pic32mxSpi.c
NfcDemo2/NxpNfcRdLib/intfs/: phCidManager.h  phKeyStore.h  phPlatform_Port_Cortex.h  phPlatform_Port_K82_RC523.h  phPlatform_Port_K82_RC663.h  phPlatform_Port_LPC11u68_RC663.h  phPlatform_Port_Pi_PN5180.h  phPlatform_Port_Pi_RC523.h  phPlatform_Port_Pi_RC663.h  phalMfc.h  phalMful.h  phhalHw.h  phhalHw_Rc523_Cmd.h  phhalHw_Rc663_Cmd.h  phpalFelica.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI14443p4a.h  phpalI14443p4mC.h  phpalMifare.h  phpalSli15693.h
NfcDemo2/NxpNfcRdLib/types/: ph_NxpBuild_Lpc.h  ph_NxpBuild_PIC32MX_PN5180.h  ph_NxpBuild_Pc.h  ph_TypeDefs.h
NfcDemo2/log/: log.c  log.h
NfcDemo2/mcc_generated_files/: interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h  spi1.c  tmr1.c  tmr1.h  tmr2.c  tmr2.h  tmr3.c  tmr3.h  uart1.c  uart1.h
NfcDemo2/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
NfcDemo2/nbproject/private/: SuppressibleMessageMemo.properties  configurations.xml  private.xml
NfcDemo2/nxp_reader_config_files/: Nfcrdlib_MIFARE.h  phApp_Init.c  phApp_Init.h  ph_NxpBuild_App.h
NfcDemo2/pn5180_files/: pn5180.c  pn5180.h
NfcDemo2/sam_reader_files/: sam_interface.c  sam_interface.h  tda8029.c  tda8029.h
NfcDemo2/system_files/: slave_spi.c  slave_spi.h  slave_spi_fifo.c  slave_spi_fifo.h  spi_flash.c  spi_flash.h  system.c  system.h  timer.c  timer.h
(+1010 files in other folders)
